# seclens

./: .env.example  .gitignore  EXECUTION_INSTRUCTIONS.md  README.md  pyproject.toml  roleSpecificBenchmark.md
docs/: README.md  coverage.md  dimensions.md  evaluation-layers.md  overview.md  roles.md  scoring.md  usage.md
paper/: role_specific_benchmark.tex  seclens_role_specific_evaluation.tex
scripts/: generate_model_reports.py  migrate_results.py
seclens/: __init__.py
seclens/cli/: compare.py  main.py  report.py  run.py  summary.py
seclens/dataset/: __init__.py  loader.py
seclens/evaluation/: __init__.py  config.py  runner.py
seclens/parsing/: __init__.py  parser.py
seclens/prompts/: __init__.py  base.yaml  builder.py  minimal.yaml  security_expert.yaml
seclens/results/: __init__.py  io.py
seclens/roles/: __init__.py  dimensions.py  dimensions_ai_actor.py  dimensions_caio.py  dimensions_ciso.py  dimensions_engineer.py  dimensions_researcher.py  normalization.py  schemas.py  scorer.py  weights.py
seclens/sandbox/: __init__.py  manager.py
seclens/schemas/: __init__.py  debug.py  model_report.py  output.py  report.py  role_report.py  scoring.py  task.py
site/: index.html
tests/: test_aggregate.py  test_cli.py  test_dataset.py  test_dimensions.py  test_model_report.py  test_models.py  test_normalization.py  test_parser.py  test_project_setup.py  test_prompt_builder.py  test_results_io.py  test_role_cli.py  test_role_dimensions.py  test_role_scorer.py  test_runner.py  test_sandbox.py  test_scoring.py  test_weights.py  test_worker_pool.py
(+11 files in other folders)
